--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -90,7 +90,7 @@
                                                 </a>
                                             <?php endif; ?>
                                             <span data-toggle="modal" data-target="#ModalUpVip">
-                                                <a class="btn btn-success" data-toggle="tooltip" title="Úp víp" data-toggle="modal" data-target="#myModal">
+                                                <a class="btn btn-warning" data-toggle="tooltip" title="Úp víp" data-toggle="modal" data-target="#myModal">
                                                     <i class="fa fa-star-o"></i>
                                                 </a>
                                             </span>
@@ -100,10 +100,10 @@
                                                 </a>
                                             <?php endif; ?>
                                             <?php if (empty($this->arrContent['user_created'])) : ?>
-                                                <a class="btn btn-success modal-confirm-pass" data-toggle="tooltip" title="Sửa tin">
+                                                <a class="btn btn-primary modal-confirm-pass" data-toggle="tooltip" title="Sửa tin">
                                                     <i class="fa fa-edit"></i>
                                                 </a>
-                                                <a class="btn btn-success delete-content" data-toggle="tooltip" title="Xóa tin">
+                                                <a class="btn btn-danger delete-content" data-toggle="tooltip" title="Xóa tin">
                                                     <i class="fa fa-trash"></i>
                                                 </a>
                                             <?php endif; ?>
