--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -419,7 +419,7 @@ if (empty($this->arrContent['user_created'])):
                     <div class="row border-detail form-control timeline-desk">
                         <input type="hidden" name="blance" value="<?php echo CUSTOMER_BALANCE; ?>">
                         <div class="col" style="margin: 5px 0px 10px 0">
-                            <p><b class="color-blue">Số dư còn lại trong tài khoản hiện tại của bạn là : </b><b class="color-red"><?php echo number_format(CUSTOMER_BALANCE, 0, ",", "."); ?>đ</b></p>
+                            <p><b class="color-blue">Số dư tài khoản của bạn là : </b><b class="color-red"><?php echo number_format(CUSTOMER_BALANCE, 0, ",", "."); ?>đ</b></p>
                         </div>
                         <div class="col" style="margin: 5px 0px 10px 0">
                             <p><img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">  <b class="color-blue">= 5000đ/Ngày</b> <b style="color: red"> Hoặc </b> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif'; ?>"> <b class="color-blue">= 2000đ/Ngày</b></p>
