--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -31,6 +31,9 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
         <meta name='revisit-after' content='1 days' />
         <link rel="alternate" href="http://bestquynhon.com" hreflang="vi-vn" />
         <meta content="<?php echo \My\General::SITE_AUTH ?>" property="og:site_name" />
+
+        <meta name="fb:pages" content="272925143041233" />
+
         <script type="text/javascript">
             var baseurl = '<?php echo $this->serverUrl(); ?>';
             var staticurl = '<?php echo STATIC_URL; ?>';
@@ -74,16 +77,16 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
     </head>
 
     <body>
-<!--        <div id='chiase'>
-            <div style="margin:4px;">
-                <div class="fb-like" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
-                <br />
-                <br />
-                <div class='nut' id='google'>
-                    <g:plusone size="tall"></g:plusone>
-                </div>
-            </div>
-        </div>-->
+        <!--        <div id='chiase'>
+                    <div style="margin:4px;">
+                        <div class="fb-like" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                        <br />
+                        <br />
+                        <div class='nut' id='google'>
+                            <g:plusone size="tall"></g:plusone>
+                        </div>
+                    </div>
+                </div>-->
         <!--<div id="fb-root"></div>-->
         <div id="loading-mask" style="left: -2px; top: 0px; width: 100%; height: 100%; display: none;">
             <p id="loading_mask_loader" class="loader">
@@ -112,9 +115,9 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
         <?php echo $this->render('frontend/header'); ?>
 
         <!--End Header section-->
-<?php echo $this->layout()->content; ?>
+        <?php echo $this->layout()->content; ?>
         <!--Footer-->
-<?php echo $this->render('frontend/footer'); ?>
+        <?php echo $this->render('frontend/footer'); ?>
         <!--End Footer-->
     </body>
 </html>
