--- a/module/Frontend/view/v1/frontend/user/change-password.phtml
+++ b/module/Frontend/view/v1/frontend/user/change-password.phtml
@@ -3,7 +3,7 @@
         <div class="row col-md-12">
             <div class="page-heading">
                 <h1>TÀI KHOẢN </h1>
-                <h4>Đổi mật khẩu</h4>
+                <h4>ĐỔI MẬT KHẨU</h4>
             </div>
         </div>
     </div>
