--- a/module/Frontend/view/v1/frontend/user/get-messages.phtml
+++ b/module/Frontend/view/v1/frontend/user/get-messages.phtml
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="row">
         <div class="col-md-12">
-            <div class="col-lg-6"><i class="fa fa-user"></i> <b>Từ :</b> <span style="color: #449d44"><?php echo $this->from_user_name; ?></span></div>
-            <div class="col-lg-6"><i class="fa fa-envelope-o"></i> <b>Email :</b> <span style="color: #449d44"><?php echo $this->from_user_email; ?></span></div>
+            <div class="col-lg-5"><i class="fa fa-user"></i> <b>Từ :</b> <span style="color: #449d44"><?php echo $this->from_user_name; ?></span></div>
+            <div class="col-lg-7"><i class="fa fa-envelope-o"></i> <b>Email :</b> <span style="color: #449d44"><?php echo $this->from_user_email; ?></span></div>
         </div>
     </div>
     <hr>
@@ -12,7 +12,7 @@
                 <b>Nội dung :</b>
             </div>
             <div class="col-lg-9">
-                <span style="color: #449d44"><?php echo $this->mess_content; ?></span>
+                <textarea class="form-control" readonly><?php echo $this->mess_content; ?></textarea>
             </div>
         </div>
     </div>
