--- a/module/Frontend/view/v1/frontend/user/index.phtml
+++ b/module/Frontend/view/v1/frontend/user/index.phtml
@@ -7,7 +7,7 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
         <div class="row col-md-12">
             <div class="page-heading">
                 <h1>TÀI KHOẢN </h1>
-                <h4>Thông tin cá nhân</h4>
+                <h4>THÔNG TIN CÁ NHÂN</h4>
             </div>
         </div>
     </div>
