--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -235,8 +235,8 @@
     "url" : "<?php echo $this->serverUrl(); ?>",
     "contactPoint" : [
     { "@type" : "ContactPoint",
-    "telephone" : "097 353 1618",
-    "contactType" : "Admin bestquynhon.com"
+    "telephone" : "0973531618",
+    "contactType" : "admin@bestquynhon.com"
     } ] }
 </script>
 <script>
