--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -47,7 +47,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
             {
             "@context": "http://schema.org",
             "@type": "Organization",
-            "url": "<?php echo $this->serverUrl(); ?>",
+            "url": "<?php echo $this->serverUrl(); ?>"
             }
         </script>
 
