--- a/module/Frontend/view/v1/layout/header.phtml
+++ b/module/Frontend/view/v1/layout/header.phtml
@@ -43,7 +43,7 @@ $action = $paramsRouter['action'];
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="logo">
-                            <a href="<?php echo $this->serverUrl(); ?>"><img src="<?php echo STATIC_URL; ?>/f/v1/images/logoct.png" alt="classify"></a>
+                            <a href="<?php echo $this->serverUrl(); ?>"><img src="<?php echo STATIC_URL; ?>/f/v1/images/logoct.png" alt="Best Quy Nhơn"></a>
                         </div>
                     </div>
                     <div class="col-sm-8">
