--- a/module/Frontend/view/v1/frontend/category/index.phtml
+++ b/module/Frontend/view/v1/frontend/category/index.phtml
@@ -113,12 +113,12 @@
                                                                             <img src="<?php echo $avatar_user; ?>" style="width: 30px; height: 30px">
                                                                         </a>
                                                                     <?php endif; ?>
-                                                                    <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $description; ?>" class="red-tooltip vip2" style="text-decoration: none;">
+                                                                    <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $description; ?>" class="red-tooltip <?php if ($arrContent['vipvip_type'] == My\General::VIP_CATE_PAGE): ?>vip2<?php elseif ($arrContent['vipvip_type'] == My\General::VIP_ALL_PAGE): ?>color-red<?php endif; ?>" style="text-decoration: none;">
                                                                         <?php echo $arrContent['cont_title']; ?>
                                                                     </a>
 
-                                                                    <span class="color-view">(<i class="fa fa-eye"> <?php echo $arrContent['cont_views']; ?></i>)</span>
-                                                                    <?php if ($arrContent['vip_type'] == \My\General::VIP_CATE_PAGE): ?><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>"><?php endif; ?> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>">
+                                                                    <span>(<i class="fa fa-eye"> <?php echo (int) $arrContent['cont_views']; ?></i>)</span>
+                                                                    <?php if ($arrContent['vip_type'] == \My\General::VIP_CATE_PAGE): ?><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>"><?php endif; ?>
                                                                 </td>
                                                                 <td class="text-center" style="vertical-align: middle">
                                                                     <a href="javascript:;" style="text-decoration: none;color: #69A467"><b><?php echo empty($arrContent['dist_id']) ? 'Toàn tỉnh' : $this->arrLocation[$arrContent['dist_id']]['dist_name']; ?></b></a>
@@ -147,11 +147,6 @@
                             </section>
                         </div>
                     </div><!--end related ads-->
-                    <div class="row">
-                        <div class="pagi">
-                            <?php echo $this->paging; ?>
-                        </div>
-                    </div>
                 </div>
             </div>
 
